--- a/templates_cfg/cfg_GRE.yaml
+++ b/templates_cfg/cfg_GRE.yaml
@@ -2,10 +2,12 @@
    "configure terminal",
    "interface xe47",
    "no switchport",
+   "speed 1g",
    "ip address 200.200.200.1/30",
 
    "interface xe48",
    "no switchport",
+   "speed 1g",
    "ip address 1.1.1.1/24",
 
    "interface Tunnel0",
