--- a/templates_cfg/cfg_GRE.yaml
+++ b/templates_cfg/cfg_GRE.yaml
@@ -1,5 +1,6 @@
- {   
-   "configure terminal",
+ { 
+   "enable",  
+   "conf t",
    "interface xe47",
    "no switchport",
    "speed 1g",
@@ -19,8 +20,6 @@
    "ip route 2.2.2.0/24 Tunnel0",
    "ip route 100.100.100.0/30 200.200.200.2",
    
-   "hui bin",
-
    "do wr",
    "do reload",
  }
