--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+allure==2.18.1
 attrs==23.1.0
 bcrypt==4.1.1
 certifi==2023.7.22
@@ -35,4 +36,4 @@ textfsm==1.1.2
 tomli==2.0.1
 typing-extensions==4.9.0
 urllib3==2.0.5
-pytest_html
+pytest-html
