--- a/constants_trident1.yaml
+++ b/constants_trident1.yaml
@@ -1,6 +1,6 @@
-- device_type: cisco_ios_telnet
-  host: 10.27.193.2
-  username: admin
-  password: bulat
-  secret: enable
-  port: 2043
+device_type: cisco_ios_telnet
+host: 10.27.193.2
+username: admin
+password: bulat
+secret: enable
+port: 23
