--- a/templates_cfg/requirements.txt
+++ b/templates_cfg/requirements.txt
@@ -5,6 +5,9 @@ cffi==1.16.0
 charset-normalizer==3.2.0
 commonmark==0.9.1
 cryptography==41.0.7
+Flask
+Flask-WTF
+email_validator
 future==0.18.3
 gns3fy==0.8.0
 idna==3.4
