--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 allure-pytest==2.13.2
 allure-python-commons==2.13.2
 attrs==23.1.0
+Babel==2.15.0
 bcrypt==4.1.1
 bidict==0.21.2
 blinker==1.7.0
@@ -10,9 +11,14 @@ charset-normalizer==3.2.0
 click==8.0.1
 commonmark==0.9.1
 cryptography==41.0.7
+dnspython==2.6.1
+docxcompose==1.4.0
+docxtpl==0.17.0
+email_validator==2.1.1
 Flask==2.0.1
 Flask-Login==0.6.3
 Flask-SocketIO==5.1.1
+Flask-WTF==1.2.1
 future==0.18.3
 gns3fy==0.8.0
 h11==0.14.0
@@ -22,6 +28,7 @@ iniconfig==2.0.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 keyboard==0.13.5
+lxml==5.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.0.1
 mdurl==0.1.2
@@ -43,8 +50,10 @@ pyserial==3.5
 pytest==7.1.3
 pytest-html==4.1.1
 pytest-metadata==3.1.0
+python-docx==1.1.2
 python-engineio==4.2.1
 python-socketio==5.4.0
+pytz==2024.1
 pyxtermjs==0.5.0.2
 PyYAML==5.3.1
 requests==2.31.0
@@ -60,4 +69,5 @@ typing_extensions==4.9.0
 urllib3==2.0.5
 Werkzeug==2.0.1
 wsproto==1.2.0
+WTForms==3.1.2
 zipp==3.17.0
