from prod add flash about end of tests

--- a/manage_app2/wsgi-config.ini
+++ b/manage_app2/wsgi-config.ini
@@ -16,6 +16,11 @@ socket = wsgi-socket.sock
 chmod-socket = 660
 vacuum = true
 
+http-timeout = 3600000
+ignore-sigpipe
+ignore-write-errors
+disable-write-exception
+
 die-on-term = true
 
 # Автоматически обновляет данные на странице после изменений содержимого сайта
