--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,164 @@
-allure-pytest==2.13.2
-allure-python-commons==2.13.2
-attrs==23.1.0
-Babel==2.15.0
-bcrypt==4.1.1
-bidict==0.21.2
-blinker==1.7.0
+adafruit-board-toolkit==1.1.0
+appdirs==1.4.4
+APScheduler==3.10.1
+apturl==0.5.2
+asgiref==3.8.1
+asttokens==2.0.5
+attrs==21.4.0
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+bcrypt==3.1.7
+beautifulsoup4==4.8.2
+black==21.12b0
+blinker==1.6.2
+Brlapi==0.7.0
 certifi==2023.7.22
-cffi==1.16.0
+chardet==3.0.4
 charset-normalizer==3.2.0
-click==8.0.1
+click==8.1.3
+colorama==0.4.3
+command-not-found==0.3
 commonmark==0.9.1
-cryptography==41.0.7
-dnspython==2.6.1
-docxcompose==1.4.0
-docxtpl==0.17.0
-email_validator==2.1.1
-Flask==2.0.1
-Flask-Login==0.6.3
-Flask-SocketIO==5.1.1
-Flask-WTF==1.2.1
-future==0.18.3
-gns3fy==0.8.0
-h11==0.14.0
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+decorator==5.1.1
+defer==1.0.6
+distlib==0.3.4
+distro==1.4.0
+distro-info===0.23ubuntu1
+Django==4.2.13
+django-extra-fields==3.0.2
+djangorestframework==3.15.1
+duplicity==0.8.12.0
+entrypoints==0.3
+executing==0.8.3
+fasteners==0.14.1
+filelock==3.7.1
+flake8==4.0.1
+Flask==2.3.2
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
+future==0.18.2
+greenlet==2.0.2
+html5lib==1.0.1
+httplib2==0.14.0
 idna==3.4
-importlib-metadata==7.0.1
-iniconfig==2.0.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
+importlib-metadata==6.6.0
+iniconfig==1.1.1
+ipykernel==5.5.6
+ipython==8.4.0
+ipython-genutils==0.2.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+jupyter-client==6.1.12
+jupyter-core==4.10.0
 keyboard==0.13.5
-lxml==5.2.1
-markdown-it-py==3.0.0
-MarkupSafe==2.0.1
-mdurl==0.1.2
-netmiko==4.3.0
-ntc_templates==4.0.1
-packaging==23.2
-paramiko==2.11.1
-pexpect==4.9.0
-ping3==4.0.4
-pkg_resources==0.0.0
-pluggy==1.3.0
-ptyprocess==0.7.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+lxml==4.5.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+monotonic==1.5
+mu-editor==1.1.1
+mypy==0.761
+mypy-extensions==0.4.3
+mysqlclient==1.4.4
+ncclient==0.6.0
+netifaces==0.10.4
+netmiko==4.1.1
+ntc-templates==3.0.0
+nudatus==0.0.5
+oauthlib==3.1.0
+olefile==0.46
+packaging==21.3
+paramiko==2.11.0
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==7.0.0
+platformdirs==2.5.2
+pluggy==1.0.0
+pprintpp==0.4.0
+prompt-toolkit==3.0.29
+protobuf==3.6.1
+psutil==5.5.1
+pure-eval==0.2.2
 py==1.11.0
-pycparser==2.21
-pydantic==1.10.13
-Pygments==2.17.2
-PyNaCl==1.5.0
+pycairo==1.16.2
+pycodestyle==2.8.0
+pycups==1.9.73
+pyflakes==2.4.0
+Pygments==2.12.0
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyneng==1.3
+pyparsing==3.0.9
+PyQt5==5.13.2
+PyQt5-sip==12.11.0
+PyQtChart==5.13.1
+pyRFC3339==1.1
 pyserial==3.5
-pytest==7.1.3
-pytest-html==4.1.1
-pytest-metadata==3.1.0
-python-docx==1.1.2
-python-engineio==4.2.1
-python-socketio==5.4.0
-pytz==2024.1
-pyxtermjs==0.5.0.2
+pytest==7.1.2
+pytest-clarity==1.0.1
+pytest-json-report==1.5.0
+pytest-metadata==2.0.1
+python-apt==2.0.1+ubuntu0.20.4.1
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2023.3
+pyxdg==0.26
 PyYAML==5.3.1
+pyzmq==23.2.0
+QScintilla==2.11.3
+qtconsole==4.7.7
+QtPy==2.1.0
+reportlab==3.5.34
 requests==2.31.0
+requests-unixsocket==0.2.0
 rich==12.4.4
-scp==0.14.5
-simple-websocket==1.0.0
-six==1.16.0
-tabulate==0.8.10
-tenacity==8.2.3
-textfsm==1.1.3
-tomli==2.0.1
-typing_extensions==4.9.0
+scp==0.14.4
+SecretStorage==2.3.1
+semver==2.13.0
+simplejson==3.16.0
+six==1.14.0
+soupsieve==1.9.5
+SQLAlchemy==2.0.15
+sqlparse==0.5.0
+stack-data==0.3.0
+system-service==0.3
+systemd-python==234
+tenacity==8.0.1
+textfsm==1.1.2
+tomli==1.2.3
+tornado==6.1
+traitlets==5.3.0
+typed-ast==1.4.1
+typing-extensions==4.2.0
+tzlocal==5.0.1
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
 urllib3==2.0.5
-Werkzeug==2.0.1
-wsproto==1.2.0
-WTForms==3.1.2
-zipp==3.17.0
+usb-creator==0.3.7
+virtualenv==20.15.0
+wadllib==1.3.3
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.3.4
+WTForms==3.0.1
+xkit==0.0.0
+zipp==3.15.0
