add compose and server up on 5000

--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,17 +1,19 @@
 # Файл nginx.conf
 server {
-  listen 80;
+listen 80;
+server_name 10.27.202.153;
+server_name switchtest.ddns.net;
 
-  location / {
-    proxy_pass http://backend:5000/;
-  }
-#   location /admin/ {
-#     proxy_pass http://backend:5000/admin/;
-#   }
+location / { 
+# Полученный запрос отправь по протоколу http в контейнер backend
+# на порт 5000 — именно его слушает Gunicorn
+    # при перенаправлении запроса в контейнер backend
+# подменить адрес "backend" в заголовке запроса 
+# на тот адрес, который пользователь ввёл в браузере
+  proxy_pass http://backend:5000/; 
+  # include uwsgi_params; 
+  # uwsgi_pass unix:/home/bulat/project_button/switches/manage_app2/wsgi-socket.sock;
+ }
+}
 
- 
-#   location / {
-#     alias /staticfiles/;
-#     index index.html;
-#   }
-} 
+
