--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,67 @@
 # Файл main.yml
 # Имя workflow
 name: Main Switches Workflow
-# Перечень событий-триггеров, при которых должен запускаться workflow
 on:
-  # Событие push возникает,
-  # когда изменения исходного кода приходят на сервер GitHub
   push:
-    # Отслеживаем изменения только в ветке main
     branches:
       - main
-# Перечень задач
+
 jobs:
-  # Единственная задача — склонировать код 
-  # и вывести в консоль дерево файлов
-  checkout-and-print-tree:
+  tests:
+    # Разворачиваем окружение:
     runs-on: ubuntu-latest
+
     steps:
-      # На GitHub Actions есть готовые описания шагов, 
-      # их можно использовать в своих workflow.
-      # Применим готовое описание шага для получения исходного кода
-      - name: Check out repository code  # Имя шага задаём сами
-        uses: actions/checkout@v3  # Берём готовое решение из библиотеки GitHub Actions
-      # Выполняем команду tree в текущей директории
-      - name: Print project tree
-        run: tree .
-        
+    # Копируем код проекта
+    - name: Check out code
+      uses: actions/checkout@v3
+    # Устанавливаем Python с помощью action
+    - name: Set up Python
+      uses: actions/setup-python@v4
+    # В action setup-python@v4 передаём параметр — версию Python
+      with:
+        python-version: 3.9
+    # Обновляем pip, устанавливаем flake8 и flake8-isort, 
+    # устанавливаем зависимости проекта
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip 
+        pip install flake8==6.0.0 flake8-isort==6.0.0
+    # Запускаем flake8
+    - name: Test with flake8
+      # Вызываем flake8 и указываем ему,
+      # что нужно проверить файлы только в папке backend/
+      run: python -m flake8 backend/ 
+
+  build_and_push_to_docker_hub:
+    runs-on: ubuntu-latest
+    # needs: tests  # Не выполнять сразу, ждать, пока выполнится tests
+    steps:
+      - name: Check out the repo
+        # Получение исходного кода из репозитория
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        # Установка сборщика контейнеров Docker
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        # Авторизация на Docker Hub
+        uses: docker/login-action@v2
+        # При помощи with передаём в action параметры username и password DOCKER
+        with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        # Одновременный билд и пуш образа в Docker Hub
+        uses: docker/build-push-action@v4
+        with:
+          # Параметр context: ./backend/ указывает, что нужный Dockerfile 
+          # находится в ./backend/
+          context: ./backend/
+          # Параметр push: true указывает, что образ нужно не только собрать,
+          # но и отправить на Docker Hub
+          push: true
+          # В параметре tags задаётся название и тег для образа.
+          # Для каждого пересобранного образа 
+          # устанавливаем тег latest, чтобы потом
+          # на сервере и в docker-compose.yml не указывать версию
+          tags: ваш-логин-на-docker-hub/taski_backend:latest 
