--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       # что нужно проверить файлы только в папке backend/
       run: python -m flake8 backend/ 
 
-  build_and_push_to_docker_hub:
+  build_backend_and_push_to_docker_hub:
     runs-on: ubuntu-latest
     # needs: tests  # Не выполнять сразу, ждать, пока выполнится tests
     steps:
@@ -64,5 +64,65 @@ jobs:
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: karryserg/taski_backend:latest
-        
+          tags: karryserg/sw_backend:latest
+
+  build_gateway_and_push_to_docker_hub:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./gateway/
+          push: true
+          tags: karryserg/sw_gateway:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: 
+      # Дождёмся билда всех образов Taski
+      - build_backend_and_push_to_docker_hub
+      - build_gateway_and_push_to_docker_hub
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v3
+     # Копируем docker-compose.production.yml на продакшен-сервер
+    - name: Copy docker-compose.yml via ssh
+      uses: appleboy/scp-action@master
+
+    # Начиная отсюда workflow работать не будет - 
+    # сервер размещения находится в серой сети, а  Аction - во внешке
+
+    # Передаём параметры для action appleboy/scp-action:
+    #   with:
+    #     host: ${{ secrets.HOST }}
+    #     username: ${{ secrets.USER }}
+    #     key: ${{ secrets.SSH_KEY }}
+    #     passphrase: ${{ secrets.SSH_PASSPHRASE }}
+    #     source: "docker-compose.production.yml"
+    #     target: "project_button"
+    # - name: Executing remote ssh commands to deploy
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.HOST }}
+    #     username: ${{ secrets.USER }}
+    #     key: ${{ secrets.SSH_KEY }}
+    #     passphrase: ${{ secrets.SSH_PASSPHRASE }}
+    #     # Параметр script передаёт в action appleboy/ssh-action команды,
+    #     # которые нужно выполнить на сервере, 
+    #     # с которым установлено соединение
+    #     script: |
+    #       cd project_button
+    #       # Выполняет pull образов с Docker Hub
+    #       sudo docker compose -f docker-compose.production.yml pull
+    #       # Перезапускает все контейнеры в Docker Compose
+    #       sudo docker compose -f docker-compose.production.yml down
+    #       sudo docker compose -f docker-compose.production.yml up -d
