--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,21 +85,21 @@ jobs:
           push: true
           tags: karryserg/sw_gateway:latest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: 
-      # Дождёмся билда всех образов Taski
-      - build_backend_and_push_to_docker_hub
-      - build_gateway_and_push_to_docker_hub
-    steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-     # Копируем docker-compose.production.yml на продакшен-сервер
-    - name: Copy docker-compose.yml via ssh
-      uses: appleboy/scp-action@master
-
     # Начиная отсюда workflow работать не будет - 
     # сервер размещения находится в серой сети, а  Аction - во внешке
+
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: 
+#       # Дождёмся билда всех образов Taski
+#       - build_backend_and_push_to_docker_hub
+#       - build_gateway_and_push_to_docker_hub
+#     steps:
+#     - name: Checkout repo
+#       uses: actions/checkout@v3
+#      # Копируем docker-compose.production.yml на продакшен-сервер
+#     - name: Copy docker-compose.yml via ssh
+#       uses: appleboy/scp-action@master
 
     # Передаём параметры для action appleboy/scp-action:
     #   with:
