--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -13,6 +13,14 @@ location / {
   proxy_pass http://backend:5000/; 
   # include uwsgi_params; 
   # uwsgi_pass unix:/home/bulat/project_button/switches/manage_app2/wsgi-socket.sock;
+  proxy_connect_timeout 600;
+        proxy_send_timeout 600;
+        proxy_read_timeout 600;
+        send_timeout 600;
+        uwsgi_max_temp_file_size 20480m;
+        include uwsgi_params;
+        uwsgi_ignore_client_abort on;
+
  }
 }
 
