add --timeout 600 in dockerbackend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,5 +12,5 @@ RUN apt-get update \
     && pip install psycopg
 COPY . .
 RUN cd manage_app2
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--timeout 600","manage_app2.wsgi"] 
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "manage_app2.wsgi", "--timeout 600"] 
 # CMD ["python", "manage_app2/app.py", "runserver"]
