--- a/backend/manage_app2/wsgi-config.ini
+++ b/backend/manage_app2/wsgi-config.ini
@@ -21,6 +21,10 @@ ignore-sigpipe
 ignore-write-errors
 disable-write-exception
 
+keepalive = 120
+timeout = 120
+
+
 die-on-term = true
 
 # Автоматически обновляет данные на странице после изменений содержимого сайта
